[package]
name = "kv-example"
version = "0.1.0"
autoexamples = false


[dependencies]
managed = { version = "0.8", default-features = false, features = ["map"] }
byteorder = { version = "1.0", default-features = false }
log = { version = "0.4.4", default-features = false, optional = true }
libc = { version = "0.2.18", optional = true }
bitflags = { version = "1.0", default-features = false }
defmt = { version = "0.3", optional = true }
serde = { version = "1.0", features = ["derive"] }


[dev-dependencies]
env_logger = "0.9"
getopts = "0.2"
rand = "0.8"
url = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[dependencies.smoltcp]
version = "0.8.0"
path = "../"
default-features = true